Add random button

--- a/static/quasicrystals/index.html
+++ b/static/quasicrystals/index.html
@@ -65,15 +65,16 @@
         <div class="control-group">
             <label for="presetSelect">Preset:</label>
             <select id="presetSelect">
-                <option value="default">Default</option>
+                <option value="classic">Classic</option>
                 <option value="fivefold">Fivefold Symmetry</option>
                 <option value="sevenfold">Sevenfold Symmetry</option>
                 <option value="twelvefold">Twelvefold Symmetry</option>
                 <option value="highcontrast">High Contrast</option>
                 <option value="logpolar">Log-Polar Spiral</option>
-                <option value="custom">Custom...</option>
+                <option value="custom" selected>Custom...</option>
             </select>
             <div class="preset-buttons">
+                <button id="randomBtn">Random</button>
                 <button id="savePresetBtn">Save</button>
                 <button id="deletePresetBtn">Delete</button>
             </div>
